[gd_scene format=3 uid="uid://54aqamyocrl7"]

[ext_resource type="Theme" uid="uid://cpc2vu26syw2w" path="res://assets/tres/overlay_theme.tres" id="1_r2eog"]
[ext_resource type="Script" uid="uid://cqpeqjjqi7f2p" path="res://scripts/overlay_screen.gd" id="2_p5j10"]
[ext_resource type="Texture2D" uid="uid://swas3bmd3bj1" path="res://textures/interface/interact.png" id="2_sfd0e"]
[ext_resource type="Script" uid="uid://bhaueknjc1gpt" path="res://scripts/interact_prompt.gd" id="4_0miq5"]
[ext_resource type="Texture2D" uid="uid://cpu7peo34nmhd" path="res://textures/interface/back.png" id="4_p5j10"]
[ext_resource type="Script" uid="uid://btkcv2ywkxx5d" path="res://scripts/back_prompt.gd" id="6_nx175"]
[ext_resource type="Texture2D" uid="uid://cywv5i5o345xi" path="res://textures/interface/chat_bubble.png" id="7_tn5s6"]
[ext_resource type="FontFile" uid="uid://cvg7xg5lalb57" path="res://assets/PlaypenSans_Bundle/Variable/PlaypenSans[wght].ttf" id="8_lhcu8"]
[ext_resource type="Texture2D" uid="uid://coegbrbnljs1e" path="res://textures/interface/gradient.png" id="9_05qsj"]

[sub_resource type="FontVariation" id="FontVariation_cpe4y"]
base_font = ExtResource("8_lhcu8")

[sub_resource type="LabelSettings" id="LabelSettings_lhcu8"]
font = SubResource("FontVariation_cpe4y")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_ikji4"]
base_font = ExtResource("8_lhcu8")

[sub_resource type="LabelSettings" id="LabelSettings_rc4e3"]
font = SubResource("FontVariation_ikji4")
font_size = 44

[node name="Overlay" type="Control" unique_id=1150663332 groups=["OverlayScreen"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_r2eog")
script = ExtResource("2_p5j10")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1627985921]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InteractPrompt" type="TextureButton" parent="MarginContainer" unique_id=475952089]
unique_name_in_owner = true
custom_minimum_size = Vector2(172, 48)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("2_sfd0e")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_0miq5")

[node name="BackPrompt" type="TextureButton" parent="MarginContainer" unique_id=1184257053]
unique_name_in_owner = true
custom_minimum_size = Vector2(172, 48)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture_normal = ExtResource("4_p5j10")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("6_nx175")

[node name="SpeechMarginContainer" type="MarginContainer" parent="MarginContainer" unique_id=498983133]
layout_mode = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 440
theme_override_constants/margin_right = 22
theme_override_constants/margin_bottom = 66

[node name="SpeechBubble" type="NinePatchRect" parent="MarginContainer/SpeechMarginContainer" unique_id=1867986002]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("7_tn5s6")
region_rect = Rect2(0, 0, 264, 264)
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="SpeechLabel" type="Label" parent="MarginContainer/SpeechMarginContainer/SpeechBubble" unique_id=1448025309]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.1
anchor_right = 0.975
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
text = "Yay"
label_settings = SubResource("LabelSettings_lhcu8")

[node name="Label" type="Label" parent="MarginContainer" unique_id=1368313373]
layout_mode = 2
size_flags_vertical = 0
text = "Old Town"
label_settings = SubResource("LabelSettings_rc4e3")
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="." unique_id=1358844724]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
texture = ExtResource("9_05qsj")
expand_mode = 5
stretch_mode = 3
